@@ -1,3 +1,11 @@
+2007-06-01  Guillaume Leroi  <guillaume.leroi@lrde.epita.fr>
+
+	Reformat code and debug output.
+	* INSTALL: .
+	* configure.ac: .
+	* src/netsoul.c: Reformat code. Suppress unused variable.
+	* src/ns_connection.c: Reformat. Nicer debug output.
+
 2007-05-30  Guillaume Leroi  <guillaume.leroi@lrde.epita.fr>
 
 	Install correctly icons.
